fix symlink bugs

--- a/config/navigate.html
+++ b/config/navigate.html
@@ -1,7 +1,7 @@
 <p>
   <table class="navigate">
     <tr>
-      <td><a href="posts.html">Posts</a></td>
+      <td><a href="../site/posts.html">Posts</a></td>
       <td><a href="https://www.github.com/dgoffredo">About</a></td>
       <td>
         <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
