--- a/site/pedant-cheat-sheet.html
+++ b/site/pedant-cheat-sheet.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
 
-  <link rel="stylesheet" type="text/css" href="style.css" />
+  <link rel="stylesheet" type="text/css" href="../site/style.css" />
 
   <title>Pedant Cheat Sheet</title>
 </head>
@@ -13,7 +13,7 @@
 <p>
   <table class="navigate">
     <tr>
-      <td><a href="posts.html">Posts</a></td>
+      <td><a href="../site/posts.html">Posts</a></td>
       <td><a href="https://www.github.com/dgoffredo">About</a></td>
       <td>
         <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
@@ -209,7 +209,7 @@ it's less likely to be wrong.</p>
 <p>
   <table class="navigate">
     <tr>
-      <td><a href="posts.html">Posts</a></td>
+      <td><a href="../site/posts.html">Posts</a></td>
       <td><a href="https://www.github.com/dgoffredo">About</a></td>
       <td>
         <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
