--- a/site/pedant-cheat-sheet.html
+++ b/site/pedant-cheat-sheet.html
@@ -89,7 +89,7 @@ means the same thing as the word "ergo."</p>
 <h3>whether or not</h3>
 
 <p>Sometimes "whether" means "if," but more often it means "if or if not," which
-would mean "whether or not" can mean "whether or not or not," which is not what
+would mean "whether or not" can mean "if or if not or not," which is not what
 you meant.  Instead, you can say "regardless of whether."  This is not a
 definite rule, though, since "whether you like it or not" is an acceptable
 phrase, even though "regardless of whether you like it" means the same thing,
@@ -108,8 +108,8 @@ ambiguity with "you like it" being a sufficient condition for "I don't know."</p
 rules are rules.  When punctation would logically follow a closing quotation,
 "like this," the punctuation must instead go just before the closing quote.
 The justification I heard is that "it looks better."  It's infuriating because
-it creates ambiguity when you end a sentence with a quote.  Peter read the text
-"Paul asked a question?"</p>
+it can create ambiguity when you end a sentence with a quote.  Peter read the
+text "Paul asked a question?"</p>
 
 <h3>OCD</h3>
 
@@ -126,7 +126,7 @@ LRU, and the NAACP.</p>
 
 <h3>essentially, basically, and in essence</h3>
 
-<p>These adverbs, like many adverbs, can be omitted without changing the meaning.</p>
+<p>These adverbs can be omitted without changing the meaning.</p>
 
 <h2>Clichés</h2>
 
@@ -168,8 +168,8 @@ euphemism for "worry about it later," or "whatever."  Stronger would be
 
 <p>Anyone who does something for money is a professional.  Anything used in such
 a profession is professional.  Usually this word is (unbeknownst to the
-speaker) a euphemism for "pretentious," "obedient," or "orthodox."  A generous
-alternative is "civil."</p>
+speaker) a euphemism for "pretentious," "obedient," or "orthodox."  I prefer
+"civil."</p>
 
 <h3>stability</h3>
 
@@ -186,13 +186,12 @@ being held accountable for success.</p>
 <h3>bike-shedding</h3>
 
 <p>This is a nice bit of jargon to describe something that happens a lot in
-computer programming, but it's a cliché.  I think "bickering" might be an
-alternative.</p>
+computer programming, but it's a cliché.   Maybe "bickering" is an alternative.</p>
 
 <h3>yak-shaving</h3>
 
-<p>Honestly I haven't heard this one too much, but I've read it a lot, and used it
-before.  Alternatives are "working" or "preparing" ("work," "preparation").</p>
+<p>I haven't heard this one much, but I've read it, and used it before.
+Alternatives are "working" or "preparing" ("work," "preparation").</p>
 
 <h3>driving</h3>
 
