commit for the table of contents, not the message queue post.

--- a/config/navigate.html
+++ b/config/navigate.html
@@ -1,4 +1,4 @@
-<p>
+<div>
   <table class="navigate">
     <tr>
       <td><a href="../site/posts.html">Posts</a></td>
@@ -8,4 +8,4 @@
       </td>
     </tr>
   </table>
-</p>
+</div>
