--- a/site/pedant-cheat-sheet.html
+++ b/site/pedant-cheat-sheet.html
@@ -1,7 +1,7 @@
 
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
 
   <link rel="stylesheet" type="text/css" href="../site/style.css" />
 
@@ -10,7 +10,7 @@
 
 <body>
 
-<p>
+<div>
   <table class="navigate">
     <tr>
       <td><a href="../site/posts.html">Posts</a></td>
@@ -20,7 +20,7 @@
       </td>
     </tr>
   </table>
-</p>
+</div>
 
 
 <p>Sunday, January  7, 2018</p>
@@ -58,7 +58,7 @@ it is becoming one, thanks to us C++ programmers, but not yet.  Use "fast" or
 
 <h3>irregardless</h3>
 
-<p>You mean "regardless."</p>
+<p>You mean "regardless."  I don't care what Merriam-Webster says.</p>
 
 <h3>evacipate</h3>
 
@@ -132,7 +132,7 @@ LRU, and the NAACP.</p>
 
 <p>Sometimes I say something because it's close enough to what I mean, and I know
 it will create the desired association in the mind of the listener, but it's
-not exectly what I mean.  I'd do better to avoid that.</p>
+not exactly what I mean.  I'd do better to avoid that.</p>
 
 <h3>at this point in time</h3>
 
@@ -205,7 +205,7 @@ written and replace it with something that is simpler and more honest, but then
 it's less likely to be wrong.</p>
 
 
-<p>
+<div>
   <table class="navigate">
     <tr>
       <td><a href="../site/posts.html">Posts</a></td>
@@ -215,7 +215,7 @@ it's less likely to be wrong.</p>
       </td>
     </tr>
   </table>
-</p>
+</div>
 
 
 </body>
