table of contents

--- a/site/pedant-cheat-sheet.html
+++ b/site/pedant-cheat-sheet.html
@@ -1,222 +1,1 @@
-
-<html>
-<head>
-  <meta charset="UTF-8" />
-
-  <link rel="stylesheet" type="text/css" href="../site/style.css" />
-
-  <title>Pedant Cheat Sheet</title>
-</head>
-
-<body>
-
-<div>
-  <table class="navigate">
-    <tr>
-      <td><a href="../site/posts.html">Posts</a></td>
-      <td><a href="https://www.github.com/dgoffredo">About</a></td>
-      <td>
-        <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
-      </td>
-    </tr>
-  </table>
-</div>
-
-
-<p>Sunday, January  7, 2018</p>
-
-<h1>Pedant Cheat Sheet</h1>
-
-<p>I've been reading a lot of technical documentation, blog posts, StackOverflow
-answers, and Reddit threads.  Some writing stands out, having an apparent
-clarity, honesty, and maturity.  I notice that my writing is not as good as it
-could be.  Here are some things that I'd like to work on.</p>
-
-<h2>Words That Don't Exist</h2>
-
-<p>English contains something like 250,000 words, but these are not among them.</p>
-
-<h3>homogenous</h3>
-
-<p>Pronounced <code>hō-ˈmȯ-je-nəs</code>, the noun derived from the verb "homogenize."  This
-is not a word.  The word is "homogeneous," pronounced <code>hō-mə-ˈjē-nē-əs</code> (notice
-the <code>e</code>s).</p>
-
-<h3>performant</h3>
-
-<p>An adjective derived from the noun "performance."  But it's not a word.  Maybe
-it is becoming one, thanks to us C++ programmers, but not yet.  Use "fast" or
-"efficient" instead.</p>
-
-<h3>condensate</h3>
-
-<p>You mean "condense."</p>
-
-<h3>conversate</h3>
-
-<p>A less common mistake, but similar to above, you mean "converse."</p>
-
-<h3>irregardless</h3>
-
-<p>You mean "regardless."  I don't care what Merriam-Webster says.</p>
-
-<h3>evacipate</h3>
-
-<p>You mean to "time travel," or perhaps to <em>bill murray</em> or to <em>carruthanize</em> (an
-example of <em>carruthenasia</em>).</p>
-
-<h2>Misused Expressions, Words, and Punctuation</h2>
-
-<p>Sometimes I say something other than what I meant, because what I said doesn't
-mean what I thought.</p>
-
-<h3>i.e.</h3>
-
-<p>"i.e." is short for <em>id est</em>, which is Latin for "that is," which is used
-before a restatement for clarification or illustration.  It does not introduce
-an example.</p>
-
-<h3>e.g.</h3>
-
-<p>"e.g." is short of <em>exempli gratia</em>, which is Latin for "for example," which is
-used before an example.  It does not mean the same thing as "i.e.," and neither
-means the same thing as the word "ergo."</p>
-
-<h3>ergo</h3>
-
-<p>"Ergo" means "therefore" or "thus."  I see no reason to use "ergo."</p>
-
-<h3>whether or not</h3>
-
-<p>Sometimes "whether" means "if," but more often it means "if or if not," which
-would mean "whether or not" can mean "if or if not or not," which is not what
-you meant.  Instead, you can say "regardless of whether."  This is not a
-definite rule, though, since "whether you like it or not" is an acceptable
-phrase, even though "regardless of whether you like it" means the same thing,
-as does "regardless of if you like it."  What I think is wrong, though, is to
-say, "I don't know whether or not you like it."  In this case, you could say
-"I don't know whether you like it," and so the "or not" is redundant.  You
-might argue that in this last example, the additional "or not" emphasizes that
-I am unsure about the outcome, rather than am concerned about the positive
-outcome, but you also might not.  "I don't know whether you like it" is clearer
-than "I don't know if you like it," though, since it avoids the potential
-ambiguity with "you like it" being a sufficient condition for "I don't know."</p>
-
-<h3>quotes, "punctuation", and how they combine</h3>
-
-<p>This is a rule that I learned in school, and I still disagree with it, but
-rules are rules.  When punctation would logically follow a closing quotation,
-"like this," the punctuation must instead go just before the closing quote.
-The justification I heard is that "it looks better."  It's infuriating because
-it can create ambiguity when you end a sentence with a quote.  Peter read the
-text "Paul asked a question?"</p>
-
-<h3>OCD</h3>
-
-<p>OCD is an initialism for obsessive-compulsive disorder, and is a noun, not an
-adjective.  You cannot "be OCD," and you cannot "get OCD about" something.
-"Obsessive compulsive," however, is an adjective, but "being OC" is not in use.</p>
-
-<h3>acronym versus initialism</h3>
-
-<p>An acronym is pronounced as a word, e.g. NASA, OPEC, ASCII, and FUBAR.  Many
-first-letter-of-every-word abbreviations, though, are not acronyms, since they
-are not pronounced as a word, but instead are only initialisms, such as CPU,
-LRU, and the NAACP.</p>
-
-<h3>essentially, basically, and in essence</h3>
-
-<p>These adverbs can be omitted without changing the meaning.</p>
-
-<h2>Clichés</h2>
-
-<p>Sometimes I say something because it's close enough to what I mean, and I know
-it will create the desired association in the mind of the listener, but it's
-not exactly what I mean.  I'd do better to avoid that.</p>
-
-<h3>at this point in time</h3>
-
-<p>You mean "now."  If using the simple word "now" makes what you're saying sound
-silly or insubstantial, then maybe what you're saying is silly or
-insubstantial.</p>
-
-<h3>going forward</h3>
-
-<p>This means "eventually," or "in the future."  I prefer either of those
-alternatives.</p>
-
-<h3>low-hanging fruit</h3>
-
-<p>Besides being a bad image, this means "easy tasks."</p>
-
-<h3>quick win</h3>
-
-<p>You mean "easy task."</p>
-
-<h3>fail</h3>
-
-<p>You mean "failure."  I'm less critical about using "feel" where you mean
-"feeling," for some reason.</p>
-
-<h3>grow organically</h3>
-
-<p>Usually when planning software that must be delivered quickly.  This is a
-euphemism for "worry about it later," or "whatever."  Stronger would be
-"neglect design."  Generous would be "it won't matter."</p>
-
-<h3>professional</h3>
-
-<p>Anyone who does something for money is a professional.  Anything used in such
-a profession is professional.  Usually this word is (unbeknownst to the
-speaker) a euphemism for "pretentious," "obedient," or "orthodox."  I prefer
-"civil."</p>
-
-<h3>stability</h3>
-
-<p>This is used instead of "not breaking."  What stable actually means is
-"established."  I prefer to distinguish between the two.  Stable can also mean
-"not wavering," so I see the intent, but software that has never worked is also
-stable.</p>
-
-<h3>accountability</h3>
-
-<p>You mean "culpability."  The term "accountability" is not mentioned when one is
-being held accountable for success.</p>
-
-<h3>bike-shedding</h3>
-
-<p>This is a nice bit of jargon to describe something that happens a lot in
-computer programming, but it's a cliché.   Maybe "bickering" is an alternative.</p>
-
-<h3>yak-shaving</h3>
-
-<p>I haven't heard this one much, but I've read it, and used it before.
-Alternatives are "working" or "preparing" ("work," "preparation").</p>
-
-<h3>driving</h3>
-
-<p>You mean "managing."</p>
-
-<h2>Editing</h2>
-
-<p>I try to keep in mind the points above when I'm editing my writing, which I
-don't do nearly enough.  Sometimes I end up having to throw away what I've
-written and replace it with something that is simpler and more honest, but then
-it's less likely to be wrong.</p>
-
-
-<div>
-  <table class="navigate">
-    <tr>
-      <td><a href="../site/posts.html">Posts</a></td>
-      <td><a href="https://www.github.com/dgoffredo">About</a></td>
-      <td>
-        <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
-      </td>
-    </tr>
-  </table>
-</div>
-
-
-</body>
-</html>
+../content/pedant-cheat-sheet.html
