fix broken links

--- a/content/callbacks.html
+++ b/content/callbacks.html
@@ -283,7 +283,7 @@ additional factory argument. </p>
 
 <h2 id="part_two">Part Two</h2>
 
-<p>If this sort of thing interests you, then take a look at <a href="callbacks2.html">part 2</a>.</p>
+<p>If this sort of thing interests you, then take a look at <a href="/site/callbacks2.html">part 2</a>.</p>
 
 
 <div>
