--- a/content/callbacks2.html
+++ b/content/callbacks2.html
@@ -28,7 +28,7 @@
 
 <h1 id="callbacks_part_2">Callbacks (Part 2)</h1>
 
-<p><a href="callbacks.html">Previously</a> I described an API for submitting a query asynchronously
+<p><a href="/site/callbacks.html">Previously</a> I described an API for submitting a query asynchronously
 in such a way that the caller provides the object into which the query results
 are written, but without having to specify an object factory.  It looked like
 this:</p>
