--- a/content/message-queue-blues.html
+++ b/content/message-queue-blues.html
@@ -1,8 +1,16 @@
 <html>
+
 <head>
   <meta charset="UTF-8" />
 
   <link href="../site/style.css" rel="stylesheet" type="text/css" />
+
+  <link href="../highlightjs/styles/default.css" rel="stylesheet" />
+
+  
+  <script src="../highlightjs/highlight.pack.js"> </script>
+
+  <script>hljs.initHighlightingOnLoad();</script>
 
   <title>Message Queue Blues</title>
 </head>
