--- a/site/message-queue-blues.html
+++ b/site/message-queue-blues.html
@@ -1,13 +1,16 @@
-<html>
 
+<html>
+<!-- Note that this is actually XML. I omit the XHTML-required "!DOC" stuff,
+     though, because I found that it caused browsers to ignore CSS's max-width
+     style. -->
 <head>
   <meta charset="UTF-8" />
 
-  <link href="../site/style.css" rel="stylesheet" type="text/css" />
+  <link rel="stylesheet" type="text/css" href="../site/style.css" />
 
-  <link href="../highlightjs/styles/default.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../highlightjs/styles/default.css" />
 
-  
+  <!-- The space character prevents etree from omitting the closing tag. -->
   <script src="../highlightjs/highlight.pack.js"> </script>
 
   <script>hljs.initHighlightingOnLoad();</script>
@@ -32,9 +35,9 @@
 
 
 
-<div class="table-of-contents"><ul><li><a href="#message_queue_blues">Message Queue Blues</a><ul><li><a href="#requirements">Requirements</a></li><li><a href="#implementation_options">Implementation Options</a></li><li><a href="#posix_message_queues_1">POSIX Message Queues</a></li><li><a href="#signals_and_system_calls">Signals and System Calls</a></li><li><a href="#using_the_message_queue_from_guile">Using The Message Queue from Guile</a></li><li><a href="#code">Code</a></li></ul></li></ul></div>
+<div class="table-of-contents"></div>
 
-<h1 id="message_queue_blues">Message Queue Blues</h1>
+<h1>Message Queue Blues</h1>
 
 <p>Imagine a portable, local, available, and minimal message queue: like a file or
 a socket, but instead of reading from or writing to it, or receiving from or
@@ -42,11 +45,11 @@ sending to it, you enqueue to and dequeue from it.  You are not the first
 person to imagine such a thing.  There are several ways to do it, but first
 some requirements.</p>
 
-<h2 id="requirements">Requirements</h2>
+<h2>Requirements</h2>
 
 <p>Here's what I'm looking for.</p>
 
-<h3 id="portable">Portable</h3>
+<h3>Portable</h3>
 
 <p>This message queue needs to work on any UNIX-like system (sorry, Microsoft):
 Linux, BSD variants, OS X, HP-UX, Solaris, and AIX at least.  Practically this
@@ -54,31 +57,31 @@ means that it must use only those facilities in POSIX.  Additionally, the queue
 must be accessible from a variety of programming languages and environments
 without much adaptation effort.  Ideally this means a file-like interface.</p>
 
-<h3 id="local">Local</h3>
+<h3>Local</h3>
 
 <p>The queue does not need to be accessible outside of the machine in which it was
 created.  I'm looking for a system-persistent (possibly gone on restart) IPC
 mechanism.</p>
 
-<h3 id="available">Available</h3>
+<h3>Available</h3>
 
 <p>The queue cannot depend on the operation of a singleton daemon (such as a
 broker process in <code>init.d</code>), and must be available as soon as process Id 1 can
 fork, possibly with the additional requirement that a file system is mounted.
 This rules out things like Redis, RabbitMQ, and ZeroMQ.</p>
 
-<h3 id="minimal">Minimal</h3>
+<h3>Minimal</h3>
 
 <p>Any source code above the system level must be short enough to read and
 understand in one sitting, and trivial to build and deploy with default
 development tools (e.g. no CMake, non-default compilers or libraries, etc.). </p>
 
-<h2 id="implementation_options">Implementation Options</h2>
+<h2>Implementation Options</h2>
 
 <p>A few possible solutions to this problem come to mind.  There are no doubt
 others, but here's what I considered.</p>
 
-<h3 id="regular_file_with_file_locking_and_polling">Regular File with File Locking and Polling</h3>
+<h3>Regular File with File Locking and Polling</h3>
 
 <p>Just use sqlite!  Job done, right?  Almost.  Sqlite (or any other regular-file-
 based IPC) requires a writer to hold a lock; nobody else can write <em>or read</em>
@@ -155,7 +158,7 @@ choice, then this is a viable option.</p>
 <p>It has the added benefit that the queue is persistent across system restart,
 so long as the database file is on a persistent drive.</p>
 
-<h3 id="regular_file_with_file_locking_and_notification_pipes">Regular File with File Locking and Notification Pipes</h3>
+<h3>Regular File with File Locking and Notification Pipes</h3>
 
 <p>For the price of added complexity, we can remove polling from the sqlite-based
 local message queue.  The idea is that when a dequeuer sees that the queue is
@@ -173,7 +176,7 @@ pipe, and then close the pipe.</p>
 eliminate polling.  A lock is taken on the database file exactly once per
 enqueue and at most once per dequeue.</p>
 
-<h3 id="unix_domain_socket_with_clientprovided_server">UNIX Domain Socket with Client-Provided Server</h3>
+<h3>UNIX Domain Socket with Client-Provided Server</h3>
 
 <p>I said in the requirements section that solutions like ZeroMQ were inadequate
 because they require a dedicated process to act as the broker or keeper of the
@@ -199,27 +202,27 @@ the establishment or reestablishment of a broker.</p>
 
 <p>But what a pain in the ass.</p>
 
-<h3 id="shared_memory">Shared Memory</h3>
+<h3>Shared Memory</h3>
 
 <p>TODO (mention <a href="https://github.com/boostorg/interprocess/blob/develop/include/boost/interprocess/ipc/message_queue.hpp">boost/interprocess/ipc/message_queue</a>)</p>
 
-<h3 id="posix_message_queues">POSIX Message Queues</h3>
+<h3>POSIX Message Queues</h3>
 
 <p>TODO An introduction that sets up the next section.</p>
 
-<h2 id="posix_message_queues_1">POSIX Message Queues</h2>
+<h2>POSIX Message Queues</h2>
 
 <p>TODO All of the pain.</p>
 
-<h2 id="signals_and_system_calls">Signals and System Calls</h2>
+<h2>Signals and System Calls</h2>
 
 <p>TODO The nitty gritty.</p>
 
-<h2 id="using_the_message_queue_from_guile">Using The Message Queue from Guile</h2>
+<h2>Using The Message Queue from Guile</h2>
 
 <p>TODO Some scheme code.</p>
 
-<h2 id="code">Code</h2>
+<h2>Code</h2>
 
 <p>TODO Mention the <code>mq</code> repository.</p>
 
