--- a/site/pedant-cheat-sheet.html
+++ b/site/pedant-cheat-sheet.html
@@ -20,9 +20,13 @@
 <div>
   <table class="navigate">
     <tr>
-      <td><a href="../site/posts.html">Posts</a></td>
-      <td><a href="https://www.github.com/dgoffredo">About</a></td>
-      <td>
+      <td align="left">
+        <a href="../site/posts.html">Posts</a>
+      </td>
+      <td align="center">
+        <a href="https://www.github.com/dgoffredo">About</a>
+      </td>
+      <td align="right">
         <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
       </td>
     </tr>
@@ -217,9 +221,13 @@ it's less likely to be wrong.</p>
 <div>
   <table class="navigate">
     <tr>
-      <td><a href="../site/posts.html">Posts</a></td>
-      <td><a href="https://www.github.com/dgoffredo">About</a></td>
-      <td>
+      <td align="left">
+        <a href="../site/posts.html">Posts</a>
+      </td>
+      <td align="center">
+        <a href="https://www.github.com/dgoffredo">About</a>
+      </td>
+      <td align="right">
         <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
       </td>
     </tr>
