--- a/site/break-cycles.html
+++ b/site/break-cycles.html
@@ -23,9 +23,13 @@
 <div>
   <table class="navigate">
     <tr>
-      <td><a href="../site/posts.html">Posts</a></td>
-      <td><a href="https://www.github.com/dgoffredo">About</a></td>
-      <td>
+      <td align="left">
+        <a href="../site/posts.html">Posts</a>
+      </td>
+      <td align="center">
+        <a href="https://www.github.com/dgoffredo">About</a>
+      </td>
+      <td align="right">
         <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
       </td>
     </tr>
@@ -141,9 +145,13 @@ directed path from <code>A</code> to <code>B</code> in the dependency graph.</p>
 <div>
   <table class="navigate">
     <tr>
-      <td><a href="../site/posts.html">Posts</a></td>
-      <td><a href="https://www.github.com/dgoffredo">About</a></td>
-      <td>
+      <td align="left">
+        <a href="../site/posts.html">Posts</a>
+      </td>
+      <td align="center">
+        <a href="https://www.github.com/dgoffredo">About</a>
+      </td>
+      <td align="right">
         <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
       </td>
     </tr>
