--- a/site/callbacks.html
+++ b/site/callbacks.html
@@ -20,9 +20,13 @@
 <div>
   <table class="navigate">
     <tr>
-      <td><a href="../site/posts.html">Posts</a></td>
-      <td><a href="https://www.github.com/dgoffredo">About</a></td>
-      <td>
+      <td align="left">
+        <a href="../site/posts.html">Posts</a>
+      </td>
+      <td align="center">
+        <a href="https://www.github.com/dgoffredo">About</a>
+      </td>
+      <td align="right">
         <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
       </td>
     </tr>
@@ -297,9 +301,13 @@ additional factory argument. </p>
 <div>
   <table class="navigate">
     <tr>
-      <td><a href="../site/posts.html">Posts</a></td>
-      <td><a href="https://www.github.com/dgoffredo">About</a></td>
-      <td>
+      <td align="left">
+        <a href="../site/posts.html">Posts</a>
+      </td>
+      <td align="center">
+        <a href="https://www.github.com/dgoffredo">About</a>
+      </td>
+      <td align="right">
         <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
       </td>
     </tr>
