--- a/site/callbacks2.html
+++ b/site/callbacks2.html
@@ -20,9 +20,13 @@
 <div>
   <table class="navigate">
     <tr>
-      <td><a href="../site/posts.html">Posts</a></td>
-      <td><a href="https://www.github.com/dgoffredo">About</a></td>
-      <td>
+      <td align="left">
+        <a href="../site/posts.html">Posts</a>
+      </td>
+      <td align="center">
+        <a href="https://www.github.com/dgoffredo">About</a>
+      </td>
+      <td align="right">
         <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
       </td>
     </tr>
@@ -226,9 +230,13 @@ inside-out bind.  Six lines of C++11 is what it is.</p>
 <div>
   <table class="navigate">
     <tr>
-      <td><a href="../site/posts.html">Posts</a></td>
-      <td><a href="https://www.github.com/dgoffredo">About</a></td>
-      <td>
+      <td align="left">
+        <a href="../site/posts.html">Posts</a>
+      </td>
+      <td align="center">
+        <a href="https://www.github.com/dgoffredo">About</a>
+      </td>
+      <td align="right">
         <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
       </td>
     </tr>
