--- a/site/message-queue-blues.html
+++ b/site/message-queue-blues.html
@@ -23,9 +23,13 @@
 <div>
   <table class="navigate">
     <tr>
-      <td><a href="../site/posts.html">Posts</a></td>
-      <td><a href="https://www.github.com/dgoffredo">About</a></td>
-      <td>
+      <td align="left">
+        <a href="../site/posts.html">Posts</a>
+      </td>
+      <td align="center">
+        <a href="https://www.github.com/dgoffredo">About</a>
+      </td>
+      <td align="right">
         <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
       </td>
     </tr>
@@ -230,9 +234,13 @@ the establishment or reestablishment of a broker.</p>
 <div>
   <table class="navigate">
     <tr>
-      <td><a href="../site/posts.html">Posts</a></td>
-      <td><a href="https://www.github.com/dgoffredo">About</a></td>
-      <td>
+      <td align="left">
+        <a href="../site/posts.html">Posts</a>
+      </td>
+      <td align="center">
+        <a href="https://www.github.com/dgoffredo">About</a>
+      </td>
+      <td align="right">
         <a href="https://www.github.com/dgoffredo/dgoffredo.github.io">Code</a>
       </td>
     </tr>
