fix an example in llama-json.md

--- a/site/llama-json.html
+++ b/site/llama-json.html
@@ -95,7 +95,7 @@ our quotes?</p>
 
 <p>Values could even be substituted in:</p>
 
-<pre><code>(let ([names ("John" "Paul" "George" "Ringo")])
+<pre><code>(let ([names ["John" "Paul" "George" "Ringo"]])
   (json {
       "Beatles": names,
       "musicians": names,
