--- a/site/llama-json.html
+++ b/site/llama-json.html
@@ -40,6 +40,12 @@
 
 <h1 id="llama_json">Llama JSON</h1>
 
+<table>
+  <tr><td><img src="../site/llama.jpg" /></td>
+      <td><img src="../site/json.gif" /></td>
+  </tr>
+</table>
+
 <p>Playing with a <a href="https://github.com/dgoffredo/llama">pet project</a>, I noticed a relationship between
 <a href="https://en.wikipedia.org/wiki/S-expression">s-expressions</a> and <a href="https://en.wikipedia.org/wiki/JSON">JSON</a>.</p>
 
