--- a/site/callbacks.html
+++ b/site/callbacks.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8" />
 
+  <link href="../site/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+
   <link href="../site/style.css" rel="stylesheet" type="text/css" />
 
   <link href="../highlightjs/styles/default.css" rel="stylesheet" />
