--- a/site/posts.html
+++ b/site/posts.html
@@ -6,6 +6,8 @@
 <head>
   <meta charset="UTF-8" />
 
+  <link rel="shortcut icon" type="image/x-icon" href="../site/favicon.ico" />
+
   <link rel="stylesheet" type="text/css" href="../site/style.css" />
 
   <link rel="stylesheet" href="../highlightjs/styles/default.css" />
