--- a/site/llama-json.html
+++ b/site/llama-json.html
@@ -42,7 +42,7 @@
 
 <h1 id="llama_json">Llama JSON</h1>
 
-<p><img alt="" src="../site.llama.jpg" title="" /> <img alt="" src="../site/json.gif" title="" /></p>
+<p><img alt="" src="../site/llama.jpg" title="" /> <img alt="" src="../site/json.gif" title="" /></p>
 
 <p>Playing with a <a href="https://github.com/dgoffredo/llama">pet project</a>, I noticed a relationship between
 <a href="https://en.wikipedia.org/wiki/S-expression">s-expressions</a> and <a href="https://en.wikipedia.org/wiki/JSON">JSON</a>.</p>
