--- a/site/break-cycles.html
+++ b/site/break-cycles.html
@@ -364,7 +364,8 @@ complete animation starting from <code>D</code>, and then the resulting edges re
 <a href="https://github.com/josch/cycle_test">test suite</a> that randomly generates directed graphs, and then compares
 the result of this algorithm with the result of brute-force checking the power
 set of the graph's edges. I could hope to find a counter-example that way,
-though none very large, since the brute force solution is superexponential.</p>
+though none very large, since the brute force solution is exponential in the
+number of edges.</p>
 
 
 <div>
