--- a/site/break-cycles.html
+++ b/site/break-cycles.html
@@ -268,7 +268,7 @@ remove from a cyclic directed graph to render it acyclic is called <a href="http
 minimum feedback arc set problem</a>, and it's
 <a href="https://en.wikipedia.org/wiki/NP-completeness">NP-complete</a>, which <a href="https://www.mat.univie.ac.at/~neum/ms/minimum_feedback_arc_set.pdf">sucks</a>.</p>
 
-<p>Apparently the solution can be approximated to an arbirary level of accuracy,
+<p>Apparently the solution can be approximated to an arbitrary level of accuracy,
 but unless I find a tested implementation of one of the approximate or complete
 solutions in an off-the-shelf graph library, I'm not about to implement it
 myself for a code generator.</p>
