regen to fix typo

--- a/site/phone-server.html
+++ b/site/phone-server.html
@@ -316,7 +316,7 @@ sleep.</p>
 <p>This already exists, of course.  It's called <a href="https://boinc.berkeley.edu/">BOINC</a>
 and there's an <a href="https://play.google.com/store/apps/details?id=edu.berkeley.boinc&amp;hl=en_US">Android app</a>
 for it that does exactly what I described.  It's now installed on my old phone
-server, chewing up CPI cycles looking for possible signals in
+server, chewing up CPU cycles looking for possible signals in
 <a href="https://www.ligo.caltech.edu/">LIGO's gravitational wave detection data</a>.</p>
 
 <p>So, hack around with your phone! It's fun, and you might learn something.</p>
