--- a/site/phone-server.html
+++ b/site/phone-server.html
@@ -225,7 +225,7 @@ port X, instead forward that connection to local address Y on port Z."</p>
 <p>So, I navigated to my router's admin web interface at <code>http://192.168.1.1</code>, and
 configured the following settings:</p>
 
-<p><img alt="port forwarding" src="port-forwarding.png" title="" /></p>
+<p><img alt="port forwarding" src="../site/port-forwarding.png" title="" /></p>
 
 <p><code>192.168.1.4</code> is the local address of my old phone, which is connected to the
 router over Wi-Fi, port <code>80</code> is the port on which I can expect HTTP requests to
@@ -247,7 +247,7 @@ phone.  Otherwise, the next time I restart the phone or the router, the phone
 might be assigned a different local address (e.g. <code>192.168.1.5</code>).  The router
 has another option for this, called "address reservation."</p>
 
-<p><img alt="address reservation" src="address-reservation.png" title="" /></p>
+<p><img alt="address reservation" src="../site/address-reservation.png" title="" /></p>
 
 <p>This says that any device having my laptop's <a href="https://en.wikipedia.org/wiki/MAC_address">MAC address</a>
 (which is just my laptop) will be assigned local address <code>192.168.1.2</code>, and any
@@ -284,7 +284,7 @@ an HTTP request to the old Android phone sitting in my apartment.</p>
 
 <p>FreeDNS's web interface looks like this:</p>
 
-<p><img alt="FreeDNS" src="freedns.png" title="" /></p>
+<p><img alt="FreeDNS" src="../site/freedns.png" title="" /></p>
 
 <p>That service even has a programmatic API, so in principle I could carry around
 my web server it my pocket, and every time it entered a new network and was
